Fixed the spot image overlapping the blurb (#157)

--- a/CooperationHullMainSite/wwwroot/css/site.css
+++ b/CooperationHullMainSite/wwwroot/css/site.css
@@ -575,6 +575,7 @@ h1 {
     height: 100%;
     padding-left: 10px;
     padding-right: 10px;
+    z-index: 1;
 }
 
     .blurb h1 {
